--- a/UC10-GameMania/src/app/views/login/login.component.html
+++ b/UC10-GameMania/src/app/views/login/login.component.html
@@ -14,7 +14,7 @@
 
             <!-- <input type="hidden" name="uriOnError" value="" [ngModel]=""> -->
 
-            <button class="btn-login btn-principal-form-dark" type="submit">Entrar</button>
+            <button class="btn-login btn-principal-form-dark" type="submit" id="botao-enviar">Entrar</button>
 
             <a class="forgotPassword-link">Esqueci minha senha</a>
         </div>
